# enso-cap

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.sh  proof.sh
enso-cap/: CMakeLists.txt
enso-cap/include/enso-cap/: enso-cap.h
enso-cap/include/enso-cap/enso/: equation.h  nonrigorous.h  rigorous.h  utility.h
enso-cap/src/enso/: nonrigorous.cpp  rigorous.cpp  utility.cpp
programs/: CMakeLists.txt  find-fixed-point-candidate.cpp  fixed-point-proof.cpp  plot.cpp  searching-for-fixed-point-switch.cpp
